# libpolycall-v2

./: .dockerignore  .gitignore  1  CMakeLists.txt  LICENSE  Makefile  Makefile.txt  README.md  REFERENCES.md  TRANSCRIPT.txt  build.sh  check_compile.sh
bindings/rust-semverx/MVP/examples/: Cargo.toml  docker-compose.yml  main.py
bindings/rust-semverx/MVP/examples/drivers/: main.go  main_rust.rs
bindings/rust-semverx/MVP/examples/src/: fault_tolerance.rs  lib.rs  p2p.rs
bindings/rust-semverx/scripts/: Cargo.toml
bindings/rust-semverx/scripts/adhoc/: fix_compilation_errors.sh  implement_missing.sh  reform.sh
bindings/rust-semverx/scripts/src/core/: mod.rs
bindings/rust-semverx/scripts/src/ffi/: mod.rs
bindings/rust-semverx/scripts/src/normalizer/: mod.rs
bindings/rust-semverx/scripts/src/resolver/: mod.rs
contrib/unstable/libpolycall/: .gitignore  CLI.md  CMakeLists.txt  LEGACY_COMPATBILE.md  Makefile  README.md  config.Polycallfile  config.Polycallfile.ignore
contrib/unstable/libpolycall/__bindings__/pypolycall/: README.md  pypolycall.polycall.ignore  pypolycall.polycallrc  pyproject.toml  setup.py
contrib/unstable/libpolycall/__bindings__/pypolycall/docs/: plan.md  stratergy.md
contrib/unstable/libpolycall/__bindings__/pypolycall/examples/: client_example.py  server_example.py
contrib/unstable/libpolycall/__bindings__/pypolycall/pypolycall/: __init__.py
contrib/unstable/libpolycall/__bindings__/pypolycall/tests/: integration_tests.py
contrib/unstable/libpolycall/__pdfs__/: Briding World - Technical Compaticality Solution.md  Telemetry Debugging via GUID and Timestamp Integration.md
contrib/unstable/libpolycall/__tests__/: CMakeLists.txt  Makefile
contrib/unstable/libpolycall/__tests__/docs/: UNIT_TEST.md
contrib/unstable/libpolycall/__tests__/integration/: CMakeLists.txt
contrib/unstable/libpolycall/__tests__/setup/: unit_test_framework.h
contrib/unstable/libpolycall/cmake/: Utils.cmake.bak  polycall-config.cmake.in
contrib/unstable/libpolycall/demo/: standardize_includes.py
contrib/unstable/libpolycall/docs/: CRYPTO.md  DIALOUGE.md  TODO.md  commands.md  integration_guide.md
contrib/unstable/libpolycall/docs/accessibiilty/: biafran_uiux.md
contrib/unstable/libpolycall/docs/auth/: API_SECURITY.md  AUTH.md
contrib/unstable/libpolycall/docs/cli/: cli_commands.md  cli_enhancement(todo).md  commands.md
contrib/unstable/libpolycall/docs/config/: POLYCALL_CONFIG.md  config_structure.md  intergration.md  testing_strats.md  zero_trust.md
contrib/unstable/libpolycall/docs/contr/: CONTRIBUTION.md  DEV_WORKFLOW.md  IGNORE.md  WORKFLOW.md
contrib/unstable/libpolycall/docs/diagrams/: ffi-interactive.tsx  ffi.md  fi_extension.tsx  uml_core.md  zero_trust.md  zero_trust_model_diagram.md
contrib/unstable/libpolycall/docs/ffi/: README.md  archeitcure.md  architecture.md  architecture.plantuml  cobol_bridge.md  component_archeitcure.md  diagram.md  ffi.md  integration_guide.md  security_model.md
contrib/unstable/libpolycall/docs/fixes/: fixes.md
contrib/unstable/libpolycall/docs/guides/: interagation_gude.md
contrib/unstable/libpolycall/docs/handling_error/: TODO.md  bugs.md  intreeatioon.md
contrib/unstable/libpolycall/docs/micro/: USAGE.md
contrib/unstable/libpolycall/docs/polycall/: guides.md
contrib/unstable/libpolycall/docs/repl/: REPL_ARCHETCURE.md  REPL_SYSTEM.md  repl_command.md  sequence.md
contrib/unstable/libpolycall/docs/themes/: biafra-guide.md
contrib/unstable/libpolycall/docs/uml/: edge_computing.md  micro_artechture.md  telemetry_architecture.md
contrib/unstable/libpolycall/examples/basic/: CMakeLists.txt  basic_example.c
contrib/unstable/libpolycall/include/: polycall.h
contrib/unstable/libpolycall/include/__tests__/: test_framework.h
contrib/unstable/libpolycall/include/polycall/: polycall.h.in  polycall_version.h.in
contrib/unstable/libpolycall/lost+found/ffi/: CMakeLists.txt  auth_commands.c  c_bridge.c  cobol_bridge.c  ffi_config.c  js_bridge.c  jvm_bridge.c  memory_bridge.c  performance.c  protocol_bridge.c  python_bridge.c  security.c  type_system.c
contrib/unstable/libpolycall/scripts/generation/: generate-test-stubs.sh  generate_unified_header.py
contrib/unstable/libpolycall/scripts/include_fix/: fix_all_includes.sh  fix_implementation_includes.py  fix_includes.sh  header_include_fixer.py  remove_missing_includes.py
contrib/unstable/libpolycall/scripts/path_fix/: enhanced_fix_includes.py  fix_all_paths.py  fix_include_paths.py  fix_include_paths_with_validation.py  fix_nested_path_includes.py  fix_polycall_paths.py  include_path_fixer.py  include_path_standardizer.py  nested_path_fixer.py  nested_path_include_corrector.py
contrib/unstable/libpolycall/scripts/standardization/: standardize_includes.py
contrib/unstable/libpolycall/scripts/testing/: polycall_unit_config.py  test_include_standadizer.py  test_standardize_include.py
contrib/unstable/libpolycall/scripts/validation/: include_path_validator.py  validate_include_paths.py  validate_includes.py
contrib/unstable/libpolycall/src/: CMakeLists.txt  Makefile
contrib/unstable/libpolycall/src/cli/: CMakeLists.txt  CMakeLists.txt.bak  command.c  main.c  main.c.bak  repl.c
contrib/unstable/libpolycall/src/cli/ffi/: CMakeLists.txt  (+1 more)
contrib/unstable/libpolycall/src/core/: CMakeLists.txt  polycall.c  polycall.c.bak
contrib/unstable/libpolycall/templates/: ComponentTest.cmake.in  polycall.h.in
contrib/unstable/libpolycall/templates/component_template/: CMakeLists.txt
contrib/unstable/libpolycall/tests_old/: CMakeLists.txt
contrib/unstable/libpolycall/tools/analyzer/: check_quality.sh  check_structure.sh  format.sh  run_ccpcheck.sh
contrib/unstable/libpolycall/tools/dev/: install_fix_script.bat  install_fix_script.sh  install_scripts.sh  standardize_paths.bat  standardize_paths.sh
contrib/unstable/libpolycall/tools/setup/: devsetup.sh
contrib/unstable/libpolycall/tools/testing/: analyze_test_coverage.sh  setup_test_directories.sh
core/src/telemetry/: CMakeLists.txt  guid_engine.c  replay_engine.c  symbolic_interpreter.c
(+891 files in other folders)
